Closed Bug 560941 Opened 15 years ago Closed 15 years ago

[OOPP] Fix the Core Graphics Shmem leak

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: BenWa, Assigned: BenWa)

References

Details

Attachments

(1 file, 3 obsolete files)

We need to dealloc the Shmem for Core Graphics out of process. We should do this as soon as bug 555275 is fixed.
Assignee: nobody → bgirard
Depends on: 555275
Attached patch Use Dealloc Shmem (obsolete) — Splinter Review
Attached patch Use Dealloc Shmem (obsolete) — Splinter Review
Removed a testing change. I tested without this patch applied. When Core Graphics is used for OOPP and you resize several times the memory usage increases rapidly without the patch and is steady with the patch.
Attachment #442415 - Attachment is obsolete: true
Attachment #442417 - Flags: review?(joshmoz)
Attached patch Use Dealloc Shmem v2 (obsolete) — Splinter Review
This patch will reset the width/height. This will safeguard against the code trying to use the Shmem if the resize allocation fails.
Attachment #442417 - Attachment is obsolete: true
Attachment #442447 - Flags: review?(joshmoz)
Attachment #442417 - Flags: review?(joshmoz)
Attachment #442447 - Attachment is obsolete: true
Attachment #442450 - Flags: review?(joshmoz)
Attachment #442447 - Flags: review?(joshmoz)
Attachment #442450 - Attachment is patch: true
Attachment #442450 - Attachment mime type: application/octet-stream → text/plain
Attachment #442450 - Flags: review?(joshmoz) → review+
Status: NEW → ASSIGNED
Verified using: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.3a5pre) Gecko/20100521 Minefield/3.7a5pre Aggressive 'Zoom in/out' of large Flash OOP with CoreGraphics does not leak memory.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: