Dealloc CoreGraphics Shmem for OOPP. b=560941 r=josh